test/reverseMeasureNonClassical.slq
// args: --run

def main(){
	reverse(measure[int[32]]); // error
	x:=H(0:ğ”¹);
	f:=()mfree=>x; // error
	reverse(f); // error
}
